@@ -235,10 +235,13 @@ sub render
 	{
 		my $p = $session->make_element( "p" );
 		$form->appendChild( $p );
+		my $label = $session->make_element( "label" );
 		my $cb = $session->make_element( "input", type => "checkbox", name => "oa" );
-		$cb->appendChild( $session->html_phrase(
+		$label->appendChild( $cb );
+		$label->appendChild( $session->make_text( " " ));
+		$label->appendChild( $session->html_phrase(
 			"request/respond_page:fieldname_oa" ) );
-		$p->appendChild( $cb );
+		$p->appendChild( $label );
 	}
 
 	$form->appendChild( $session->render_hidden_field( "screen", $self->{processor}->{screenid} ) );
