@@ -7267,4 +7267,6 @@ PACKAGE: 2.2.99.2
  * Added a history citation to fix a bug that appears to have been 
     introduced by the citation auto-reloader.
 
-
+2008-04-05 cjg
+ * Made a <label> tag surround the checkbox and label in the respond 
+    to request screen.
